pkg/ext-authz.yaml
# TODO: Restore back to use AuthorizationPolicy once the bug on ASM side is fixed.
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: ext-authz
#   namespace: istio-system
# spec:
#   selector:
#     matchLabels:
#       istio: ingressgateway
#   action: CUSTOM
#   provider:
#     name: asm-userauth-grpc
#   rules:
#   - {}
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingress-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
            subFilter:
              name: "envoy.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_authz
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          grpc_service:
            envoy_grpc:
              cluster_name: patched.authservice.asm-user-auth.svc.cluster.local
            timeout: 10s
          transport_api_version: V3
          failure_mode_allow: false
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz-filter-cluster-patch
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        service: authservice.asm-user-auth.svc.cluster.local
    patch:
      operation: MERGE
      value:
        name: "patched.authservice.asm-user-auth.svc.cluster.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: bypass-ext-authz
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-ingressgateway
  configPatches:
  - applyTo: HTTP_ROUTE
    match:
      routeConfiguration:
        vhost:
          name: '*:443'
          route:
            name: ip-route  # From virtual service http route name
    patch:
      operation: MERGE
      value:
        typed_per_filter_config:
          envoy.filters.http.ext_authz:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
            disabled: true
