pkg/gateway.yaml
# The following gateway is serving the OIDC termination requests as well as
# the application traffic.
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: userauth
  namespace: asm-user-auth
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: https
      protocol: HTTPS
      number: 443
    hosts:  # kpt-set ${hosts}
    - '*'
    tls:
      credentialName: userauth-tls-cert
      mode: SIMPLE
---
# This ensure the OIDC endpiont has at least some route defined.
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: userauth-oidc
  namespace: asm-user-auth
spec:
  gateways:
  - userauth
  hosts:  # kpt-set ${hosts}
  - '*'
  http:
  - name: user-auth-route
    match:
    - uri:
        prefix: /status
    - uri:
        prefix: "/_gcp_asm_authenticate"  # kpt-set: ${redirect-path}
    route:
    - destination:
        port:
          number: 10004
        host: authservice
