pkg/ext_authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: asm-userauth-grpc
  rules:
  - to:
    - operation:
        notPaths: ["/ip"]
